--- a/Pemweb_Home.html
+++ b/Pemweb_Home.html
@@ -69,7 +69,7 @@
         <a class="nav-link active" href="Pemweb_Materi.html">MATERI</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link active" href="Pemweb_Latihan.php">LATIHAN</a>
+        <a class="nav-link active" href="Pemweb_Latihan.html">LATIHAN</a>
         </li>
         <li class="nav-item">
         <a class="nav-link active" href="Pemweb/Contoh soal bilangan bulat.pdf">SOAL</a>  
